# lamina-web

./: Cargo.toml  README.md
content/: fix-xcrun-metal-issue.md
src/: app.rs  config.rs  handlers.rs  logger.rs  main.rs  releases.rs  routes.rs  server.rs  templates.rs
src/components/: mod.rs  sitemap.rs
src/components/codeblock/: bash.rs  c.rs  lamina.rs  mod.rs  rust.rs
static/assets/favicon/: site.webmanifest
static/css/: lamina.css  style.css
templates/: 404.html  base.html  blog_list.html  docs.html  docs_c_bindings.html  docs_c_bindings_install.html  docs_c_bindings_usage.html  docs_cli.html  docs_getting_started.html  docs_index.html  docs_ir.html  docs_irbuilder.html  docs_rust.html  docs_targets.html  homepage.html  index.html  lamina_homepage.html
templates/components/: docs_header.html  docs_sidebar.html  fab.html  footer.html
