[package]
name = "lamina-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["net", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs"] }
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
